# viasixmacos

./: .editorconfig  .gitignore  .swift-format  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PRIVACY.md  Package.resolved  Package.swift  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  release.yml  windows-build.yml
Docs/: ADDRESS_SOURCES.md  ARCHITECTURE.md  DEVELOPMENT.md  RELEASING.md  USER_GUIDE.md  VIRTUAL_NETWORK.md
Packaging/: Info.plist
Packaging/LaunchDaemons/: com.felix.viasix.tun-helper.plist
Scripts/: check-doc-links.sh  fetch-mihomo.sh  generate-icon.sh  package-app.sh  verify-app.sh
Server/CloudflarePages/: README.md  mihomo-vless.example.yaml  worker-template.js
Sources/ViaSixCore/: AppMetadata.swift  AppSection.swift
Sources/ViaSixMihomoConfig/: LegacyXrayConfigurationMigrator.swift  MihomoPrivilegedEnvelope.swift  MihomoPrivilegedProjection.swift  MihomoProxyProfile.swift  MihomoServerConfiguration.swift  MihomoShareLinkParser.swift  MihomoTypes.swift  MihomoYAML.swift
Sources/ViaSixPrivilegedProtocol/: CodeSigningIdentity.swift  TunHelperProtocol.swift  TunLocalInstallationPolicy.swift
apps/: README.md
apps/windows/src-tauri/: Cargo.toml  tauri.conf.json
apps/windows/src-tauri/capabilities/: default.json
apps/windows/src-tauri/src/: lib.rs  main.rs
apps/windows/src-tauri/src/connectivity/: mod.rs
apps/windows/src-tauri/src/ip_lists/: mod.rs
apps/windows/src-tauri/src/local_proxy/: mod.rs
apps/windows/src-tauri/src/prefs/: mod.rs
apps/windows/src-tauri/src/profile_store/: mod.rs
apps/windows/src-tauri/src/projection/: mod.rs
apps/windows/src-tauri/src/runtime/: mod.rs
apps/windows/src-tauri/src/speed_test/: mod.rs
apps/windows/src-tauri/src/traffic/: mod.rs
apps/windows/src-tauri/src/virtual_network/: mod.rs
contracts/: README.md
signing/: README.md
(+356 files in other folders)
