[package]
name = "viasix-windows"
version = "0.1.0"
description = "ViaSix Windows client (MVP)"
authors = ["ViaSix contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "viasix_windows_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
parking_lot = "0.12"

[dev-dependencies]
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
