[package]
name = "viasix-windows"
version = "0.1.1"
# Keep in sync with package.json and tauri.conf.json
description = "ViaSix Windows client (MVP)"
authors = ["ViaSix contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "viasix_windows_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
viasix-mihomo-config = { path = "../../../packages/viasix-mihomo-config" }
thiserror = "2"
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_Networking_WinInet",
] }

[dev-dependencies]
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
